# Float-Error-Neural-Network-N

./: .gitignore  cpp-bc.sh  data.txt  llvm.sh
AutomaticAnalysisOfNumericalSoftware-Cpp/: CMakeLists.txt  main.cpp  result.csv
AutomaticAnalysisOfNumericalSoftware-Py/: bc_generator.py  cpp_generator.py  file_cleaner.py  result_generator.py
Modified-LLVM/: AsmWriter.cpp  lli.cpp
cpp_bc/: exp1.bc  exp2.bc  exp3.bc  pow_add.bc  sin_minus1.bc  sin_minus2.bc  sin_minus3.bc  sqrt_minus1.bc  sqrt_minus10.bc  sqrt_minus11.bc  sqrt_minus12.bc  sqrt_minus13.bc  sqrt_minus14.bc  sqrt_minus15.bc  sqrt_minus16.bc  sqrt_minus17.bc  sqrt_minus18.bc  sqrt_minus19.bc  sqrt_minus2.bc  sqrt_minus20.bc  sqrt_minus3.bc  sqrt_minus4.bc  sqrt_minus5.bc  sqrt_minus6.bc  sqrt_minus7.bc  sqrt_minus8.bc  sqrt_minus9.bc
cpp_bc/add/: sqrt_minus1.bc  sqrt_minus10.bc  (+28 more)
cpp_ll/: exp1.ll  exp2.ll  exp3.ll  pow_add.ll  sin_minus1.ll  sin_minus2.ll  sin_minus3.ll  sqrt_minus1.ll  sqrt_minus10.ll  sqrt_minus11.ll  sqrt_minus12.ll  sqrt_minus13.ll  sqrt_minus14.ll  sqrt_minus15.ll  sqrt_minus16.ll  sqrt_minus17.ll  sqrt_minus18.ll  sqrt_minus19.ll  sqrt_minus2.ll  sqrt_minus20.ll  sqrt_minus3.ll  sqrt_minus4.ll  sqrt_minus5.ll  sqrt_minus6.ll  sqrt_minus7.ll  sqrt_minus8.ll  sqrt_minus9.ll
cpp_raw/: exp1.cpp  exp2.cpp  exp3.cpp  pow_add.cpp  sin_minus1.cpp  sin_minus2.cpp  sin_minus3.cpp  sqrt_minus1.cpp  sqrt_minus2.cpp  sqrt_minus3.cpp
dataset/: error_sqrt_minus2.csv  sqrt_minus1.cpp  sqrt_minus2.cpp  sqrt_minus3.cpp
lli-pre-process/: lli.sh
py/: BCTool.py  CNN.py  DataTool.py  train.py
(+190 files in other folders)
